@@ -1,3 +1,11 @@
+Sat Jun 19 03:35:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/psych/lib/psych/visitors/to_ruby.rb (resolve_klass): fix the
+	  exception message when attempting to load an unknown class.  Thanks
+	  nobu! [ruby-dev:41399]
+
+	* test/psych/test_psych.rb: test for the exception message
+
 Fri Jun 18 01:50:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* object.c: Object#public_methods, private_methods, etc. returns
